--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="black_overlay">#66000000</color>
     <color name="white">#ffffff</color>
+    <color name="light_grey">#A9A9A9</color>
 </resources>
