# add action in ime option for search

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -52,7 +52,7 @@
                     android:layout_alignParentRight="true"
                     android:foreground="?attr/selectableItemBackground"
                     android:scaleType="centerInside"
-                    android:src="@drawable/icn_search" />
+                    android:src="@drawable/outline_history" />
 
             </RelativeLayout>
 
