--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -31,21 +31,21 @@
                     android:id="@+id/etSearchLocation"
                     android:layout_width="match_parent"
                     android:layout_height="56dp"
-                    android:layout_toStartOf="@+id/ivSearch"
-                    android:layout_toLeftOf="@+id/ivSearch"
+                    android:layout_toStartOf="@+id/ivHistory"
+                    android:layout_toLeftOf="@+id/ivHistory"
                     android:background="@color/white"
                     android:hint="@string/choose_location"
+                    android:imeOptions="actionSearch"
+                    android:inputType="text"
+                    android:maxLines="1"
                     android:paddingStart="@dimen/spacing_normal"
                     android:paddingEnd="@dimen/spacing_normal"
                     android:textColor="#2F4F4F"
-                    android:maxLines="1"
-                    android:imeOptions="actionSearch"
-                    android:inputType="text"
                     android:textColorHint="@color/light_grey"
                     android:textSize="16sp" />
 
                 <ImageView
-                    android:id="@+id/ivSearch"
+                    android:id="@+id/ivHistory"
                     android:layout_width="56dp"
                     android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
@@ -57,6 +57,19 @@
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/spacing_normal"
+            android:layout_marginRight="@dimen/spacing_normal"
+            android:layout_marginBottom="@dimen/spacing_normal"
+            android:src="@drawable/icn_search"
+            android:tint="@color/white"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
