--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -40,7 +40,7 @@
                     android:maxLines="1"
                     android:paddingStart="@dimen/spacing_normal"
                     android:paddingEnd="@dimen/spacing_normal"
-                    android:textColor="#2F4F4F"
+                    android:textColor="@color/dark_grey_blue"
                     android:textColorHint="@color/light_grey"
                     android:textSize="16sp" />
 
