--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="black_overlay">#66000000</color>
     <color name="white">#ffffff</color>
     <color name="light_grey">#A9A9A9</color>
+    <color name="light_greu">#f2f2f2</color>
+    <color name="dark_grey_blue">#2F4F4F</color>
 </resources>
