# Displayed weather report in dialo when click on marker

--- a/app/src/main/res/layout/fragment_weather_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_weather_detail_dialog.xml
@@ -28,6 +28,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:id="@+id/ivClose"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_alignParentEnd="true"
